--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -9,22 +9,22 @@ services:
     networks:
       - internal
     volumes:
-      - ./dhcpd1.conf:/etc/dhcp/dhcpd.conf:ro
+      - "./dhcpd1.conf:/etc/dhcp/dhcpd.conf:ro"
 
   dhcp2:
     build: ./dhcp-image
     networks:
       - internal
     volumes:
-      - ./dhcpd2.conf:/etc/dhcp/dhcpd.conf:ro
+      - "./dhcpd2.conf:/etc/dhcp/dhcpd.conf:ro"
 
   tests_runner:
     image: mcr.microsoft.com/dotnet/core/sdk:2.2
     networks:
       - internal
-    # depends_on:
-    #   - dhcp1
-    #   - dhcp2
+    depends_on:
+      - dhcp1
+      - dhcp2
     volumes:
       - ../src:/src:rw
       - ./scripts:/scripts:ro
