--- a/.circleci/dhcp-image/Dockerfile
+++ b/.circleci/dhcp-image/Dockerfile
@@ -5,4 +5,4 @@ RUN apk add --no-cache dhcp && \
 
 VOLUME /etc/dhcp/dhcpd.conf
 
-ENTRYPOINT [ "/usr/sbin/dhcpd", "-4", "-f", "-cf /etc/dhcp/dhcpd.conf", "-lf", "/dhcp.leases" ]
+ENTRYPOINT [ "/usr/sbin/dhcpd", "-4", "-f", "-cf", "/etc/dhcp/dhcpd.conf", "-lf", "/dhcp.leases" ]
