--- a/src/Pixey.Dhcp/Pixey.Dhcp.csproj
+++ b/src/Pixey.Dhcp/Pixey.Dhcp.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
